Adicionado suporte ao NebularAuth; Alterações na tela de veículos
