# src/api/to_de_taxi/models/passageiro-summary.ts
@@ -1,9 +1,11 @@
 /* tslint:disable */
+import { UsuarioSummary } from './usuario-summary';
+import { LocalizacaoSummary } from './localizacao-summary';
 export interface PassageiroSummary {
   id?: string;
-  idUsuario?: string;
   cpf?: string;
-  idEndereco?: string;
-  idLocalizacaoAtual?: string;
   idFoto?: string;
+  idLocalizacaoAtual?: string;
+  usuario?: UsuarioSummary;
+  endereco?: LocalizacaoSummary;
 }
