# src/api/to_de_taxi/models/usuario-summary.ts
@@ -1,0 +1,8 @@
+/* tslint:disable */
+export interface UsuarioSummary {
+  id?: string;
+  login?: string;
+  senha?: string;
+  nome?: string;
+  tipo?: 0 | 1 | 2 | 3;
+}
